# Fabryca

./: .gitignore  CMakeLists.txt  README.md  generate_launcher.py
Fabryca/: Application.cpp  Configuration.cpp  Configuration.h  Foundation.h  GameInstance.cpp  GameInstance.h  GameObject.cpp  GameObject.h  HealthIndicator.cpp  HealthIndicator.h  NumberDisplayer.cpp  NumberDisplayer.h  Object.cpp  Object.h  Structure.cpp  Structure.h  Terrain.cpp  Terrain.h  TerrainBlock.cpp  TerrainBlock.h
Fabryca/Characters/: Character.cpp  Character.h  Human.cpp  Human.h  Player.cpp  Player.h
Fabryca/Characters/Enemies/: Enemy.cpp  Enemy.h  ForestDemon.cpp  ForestDemon.h  HoveringBeast.cpp  HoveringBeast.h  PoisonousMonster.cpp  PoisonousMonster.h
Fabryca/Constants/: EnemyConstants.h  HumanConstants.h
Fabryca/Testing/: CharacterTest.cpp  FabrycaTests.cpp
Fabryca/Utility/: NumericAttribute.cpp  NumericAttribute.h  Point.cpp  Point.h  Random.cpp  Random.h
Fabryca/characters/: Character.cpp  Character.h  Player.cpp  Player.h
Fabryca/characters/enemies/: Enemy.cpp  Enemy.h  ForestDemon.cpp  ForestDemon.h  HoveringBeast.cpp  HoveringBeast.h  PoisonousMonster.cpp  PoisonousMonster.h
Fabryca/graphics/: Animation.cpp  Animation.h  Camera.cpp  Camera.h  Graphics.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  SceneObject.cpp  SceneObject.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.cpp  Vertex.h  VertexBuffer.cpp  VertexBuffer.h  WindowManager.cpp  WindowManager.h  glad.c  glad.h
Fabryca/items/: CureItem.cpp  CureItem.h  Item.cpp  Item.h  KeyItem.cpp  KeyItem.h
Fabryca/items/weapons/: Weapon.cpp  Weapon.h
Fabryca/resources/: Settings.json
Fabryca/resources/shaders/basic/: fragment.glsl  vertex.glsl
Fabryca/resources/shaders/basic-point-light/: vertex.glsl
Fabryca/resources/shaders/basicPointLight/: fragment.glsl
Fabryca/resources/shaders/basicPointLightBounded/: fragment.glsl
Fabryca/resources/shaders/pointLight/: fragment.glsl
Fabryca/resources/shaders/pointLightBounded/: fragment.glsl  vertex.glsl
Fabryca/resources/terrain/: data
Fabryca/resources/textures/: forestDemon.bt  house.bt  hoveringBeast.bt  player.bt  poisonousMonster.bt  spruce0.bt  spruce1.bt  spruce2.bt  spruce3.bt  spruce4.bt  spruce5.bt
Fabryca/testing/: CharacterTest.cpp  GameInstanceTest.cpp  GameTest.cpp  GraphicsTest.cpp  Tests.cpp  UtilityTest.cpp
Fabryca/utility/: EventManager.h  Filepath.cpp  Filepath.h  JSON.cpp  JSON.h  NumericAttribute.cpp  NumericAttribute.h  Point.cpp  Point.h  Random.h
